@@ -4,18 +4,13 @@ import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
-import org.springframework.boot.test.autoconfigure.web.servlet.MockMvcPrint;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.context.annotation.ComponentScan;
-import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.test.context.junit4.SpringRunner;
 import org.springframework.transaction.annotation.Transactional;
 import techpark.Application;
 import techpark.user.UserProfile;
 import techpark.user.UserToInfo;
 
-import javax.sql.DataSource;
 import java.util.LinkedList;
 
 import static org.junit.Assert.*;
@@ -24,6 +19,7 @@ import static org.junit.Assert.*;
  * Created by Варя on 30.03.2017.
  */
 
+@SuppressWarnings("ConstantConditions")
 @RunWith(SpringRunner.class)
 @SpringBootTest(classes = Application.class)
 @Transactional
@@ -106,7 +102,7 @@ public class AccountServiceTest {
         final UserProfile user = accountService.getUserByLogin("login1");
         assertNotNull(user);
         accountService.changeScore(user, 6);
-        assertEquals(6, accountService.getScore("login1").longValue());
+        assertEquals(6, accountService.getScore("login1"));
     }
 
     @Test
@@ -114,11 +110,11 @@ public class AccountServiceTest {
         UserProfile user = accountService.getUserByLogin("login1");
         assertNotNull(user);
         accountService.changeScore(user, 6);
-        assertEquals(6, accountService.getScore("login1").longValue());
+        assertEquals(6, accountService.getScore("login1"));
         user = accountService.getUserByLogin("login1");
         System.out.println(user.getScore());
         accountService.changeScore(user, 5);
-        assertEquals(6, accountService.getScore("login1").longValue());
+        assertEquals(6, accountService.getScore("login1"));
     }
 
     @Test
@@ -126,25 +122,30 @@ public class AccountServiceTest {
         final UserProfile user = accountService.getUserByLogin("login2");
         assertNotNull(user);
         accountService.changeScore(user, 10);
-        assertEquals(10, accountService.getScore("login2").longValue());
+        assertEquals(10, accountService.getScore("login2"));
     }
 
+    @SuppressWarnings({"ConstantConditions", "MagicNumber"})
     @Test
     public void testGetAllUsers(){
-        /*final UserProfile user1 = accountService.getUserByLogin("login1");
-        final UserProfile user2 = accountService.getUserByLogin("login2");
-        final UserProfile user3 = accountService.getUserByLogin("login3");
+        UserProfile user1 = accountService.getUserByLogin("login1");
+        UserProfile user2 = accountService.getUserByLogin("login2");
+        UserProfile user3 = accountService.getUserByLogin("login3");
         assertNotNull(user1);
         assertNotNull(user2);
         assertNotNull(user3);
         accountService.changeScore(user1, 100);
         accountService.changeScore(user2, 110);
-        accountService.changeScore(user3, 120);*/
-        LinkedList<UserToInfo> bestUsers = accountService.getAllUsers();
-        System.out.println(bestUsers.getFirst().login);
-        System.out.println(bestUsers.getLast().login);
-        /*assertEquals(user3, bestUsers.get(1));
-        assertEquals(user2, bestUsers.get(2));
-        assertEquals(user1, bestUsers.get(3));*/
+        accountService.changeScore(user3, 120);
+        user1 = accountService.getUserByLogin("login1");
+        user2 = accountService.getUserByLogin("login2");
+        user3 = accountService.getUserByLogin("login3");
+        final LinkedList<UserToInfo> bestUsers = accountService.getAllUsers();
+        assertEquals(user3.getLogin(), bestUsers.get(0).login);
+        assertEquals(user3.getScore().intValue(), bestUsers.get(0).score);
+        assertEquals(user2.getLogin(), bestUsers.get(1).login);
+        assertEquals(user2.getScore().intValue(), bestUsers.get(1).score);
+        assertEquals(user1.getLogin(), bestUsers.get(2).login);
+        assertEquals(user1.getScore().intValue(), bestUsers.get(2).score);
     }
 }
